k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weather-api
spec:
  type: NodePort
  selector:
    app: weather-api
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      nodePort: 30080
